# Skynet

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  skynet.cpp  skynet.h
tests/: CMakeLists.txt  test_skynet.cpp
